// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetComponent should create component with hidden slots, then show, then hide back 1`] = `
<mlb-parking-widget
  buying={[Function OutputEmitterRef]}
  features={[Function Array]}
  features$={[Function SafeSubscriber]}
  parkingSlots={[Function Array]}
  parkingSlots$={[Function SafeSubscriber]}
  service={[Function WidgetService]}
  showDetails={[Function Array]}
  vendor={[Function Function]}
>
  <mat-card
    class="mat-mdc-card mdc-card"
  >
    <mat-card-title
      class="mat-mdc-card-title"
    >
      Test Vendor
    </mat-card-title>
    <mat-card-subtitle
      class="mat-mdc-card-subtitle"
    >
      This is a test vendor
    </mat-card-subtitle>
    <mat-card-content
      class="mat-mdc-card-content"
    >
      <mat-list
        aria-disabled="false"
        class="mat-mdc-list mat-mdc-list-base mdc-list"
        role="list"
      >
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 1
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 2
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 3
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
      </mat-list>
      <mat-divider
        aria-orientation="horizontal"
        class="mat-divider mat-divider-horizontal"
        role="separator"
      />
      <div>
        <div>
           Slot 1 
          <button
            mat-stroked-button=""
          >
             Add to cart 
          </button>
          <button
            mat-stroked-button=""
          >
            Expand
          </button>
        </div>
      </div>
    </mat-card-content>
  </mat-card>
</mlb-parking-widget>
`;

exports[`WidgetComponent should create component with hidden slots, then show, then hide back 2`] = `
<mlb-parking-widget
  buying={[Function OutputEmitterRef]}
  features={[Function Array]}
  features$={[Function SafeSubscriber]}
  parkingSlots={[Function Array]}
  parkingSlots$={[Function SafeSubscriber]}
  service={[Function WidgetService]}
  showDetails={[Function Array]}
  vendor={[Function Function]}
>
  <mat-card
    class="mat-mdc-card mdc-card"
  >
    <mat-card-title
      class="mat-mdc-card-title"
    >
      Test Vendor
    </mat-card-title>
    <mat-card-subtitle
      class="mat-mdc-card-subtitle"
    >
      This is a test vendor
    </mat-card-subtitle>
    <mat-card-content
      class="mat-mdc-card-content"
    >
      <mat-list
        aria-disabled="false"
        class="mat-mdc-list mat-mdc-list-base mdc-list"
        role="list"
      >
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 1
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 2
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 3
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
      </mat-list>
      <mat-divider
        aria-orientation="horizontal"
        class="mat-divider mat-divider-horizontal"
        role="separator"
      />
      <div>
        <div>
           Slot 1 
          <button
            mat-stroked-button=""
          >
             Add to cart 
          </button>
          <button
            mat-stroked-button=""
          >
             Collapse 
          </button>
          <mat-list
            aria-disabled="false"
            class="mat-mdc-list mat-mdc-list-base mdc-list"
            role="list"
          >
            <mat-list-item
              aria-disabled="false"
              class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
              role="listitem"
            >
              <span
                class="mdc-list-item__content"
              >
                <span
                  class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
                >
                  Feature 1 
                </span>
              </span>
              <div
                class="mat-focus-indicator"
              />
            </mat-list-item>
            <mat-list-item
              aria-disabled="false"
              class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
              role="listitem"
            >
              <span
                class="mdc-list-item__content"
              >
                <span
                  class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
                >
                  Feature 2 
                </span>
              </span>
              <div
                class="mat-focus-indicator"
              />
            </mat-list-item>
          </mat-list>
        </div>
      </div>
    </mat-card-content>
  </mat-card>
</mlb-parking-widget>
`;

exports[`WidgetComponent should create component with hidden slots, then show, then hide back 3`] = `
<mlb-parking-widget
  buying={[Function OutputEmitterRef]}
  features={[Function Array]}
  features$={[Function SafeSubscriber]}
  parkingSlots={[Function Array]}
  parkingSlots$={[Function SafeSubscriber]}
  service={[Function WidgetService]}
  showDetails={[Function Array]}
  vendor={[Function Function]}
>
  <mat-card
    class="mat-mdc-card mdc-card"
  >
    <mat-card-title
      class="mat-mdc-card-title"
    >
      Test Vendor
    </mat-card-title>
    <mat-card-subtitle
      class="mat-mdc-card-subtitle"
    >
      This is a test vendor
    </mat-card-subtitle>
    <mat-card-content
      class="mat-mdc-card-content"
    >
      <mat-list
        aria-disabled="false"
        class="mat-mdc-list mat-mdc-list-base mdc-list"
        role="list"
      >
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 1
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 2
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
        <mat-list-item
          aria-disabled="false"
          class="mat-mdc-list-item mdc-list-item mat-mdc-list-item-single-line mdc-list-item--with-one-line"
          role="listitem"
        >
          <span
            class="mdc-list-item__content"
          >
            <span
              class="mat-mdc-list-item-unscoped-content mdc-list-item__primary-text"
            >
              Feature 3
            </span>
          </span>
          <div
            class="mat-focus-indicator"
          />
        </mat-list-item>
      </mat-list>
      <mat-divider
        aria-orientation="horizontal"
        class="mat-divider mat-divider-horizontal"
        role="separator"
      />
      <div>
        <div>
           Slot 1 
          <button
            mat-stroked-button=""
          >
             Add to cart 
          </button>
          <button
            mat-stroked-button=""
          >
            Expand
          </button>
        </div>
      </div>
    </mat-card-content>
  </mat-card>
</mlb-parking-widget>
`;
